--- a/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
@@ -27,6 +27,10 @@
     font-family: Roboto-Light;
     font-size: 40px;
     color: #6da2a3;
+  em {
+    font-size: 20px;
+    font-family: Roboto-Thin;
+    }
   }
 
 /* praises.svg */
@@ -220,7 +224,4 @@
     text-align: center;
   }
 
-  #gform_submit_button_1 {
-    .img-responsive;
-  }
 /* Button */
