--- a/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
@@ -23,10 +23,10 @@
 
 /* Praise Section */
   .praise-text {
-    margin-top: 50px;
+    /*margin-top: 50px;
     font-family: Roboto-Light;
     font-size: 40px;
-    color: #6da2a3;
+    color: #6da2a3; */
   em {
     font-size: 20px;
     font-family: Roboto-Thin;
