--- a/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
@@ -208,6 +208,9 @@
     margin-top: 20px;
     text-align: center;
     max-width: 98%;
+    .textarea.small {
+      width:49.5%;
+    }
   }
 
   .gform_fields {
@@ -226,7 +229,10 @@
   .message {
     text-align: center;
     margin-top: 20px;
+    /*width: 50%;
+    padding: 10px;*/
   }
+
 /* Both Field labels */
   .gfield_label {
     letter-spacing: 0.50em;
@@ -245,7 +251,6 @@
 
   #gform_fields_1 {
     text-align: center;
-    width: 50%;
   }
 
 /* Button */
