Organized GF scss page

--- a/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
@@ -233,7 +233,7 @@
     padding: 10px;*/
   }
 
-/* Both Field labels */
+/* Field labels */
   .gfield_label {
     letter-spacing: 0.50em;
   }
@@ -243,6 +243,7 @@
     text-align: center;
     letter-spacing: .60em;
   }
+/* Button */
   .gform_button {
     background-color: #6da2a3;
     border: 1px solid transparent;
@@ -253,4 +254,4 @@
     text-align: center;
   }
 
-/* Button */
+/* About Page */
