--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -3,21 +3,21 @@
 
 // css output Roboto
 @font-face {
-  font-family: "Roboto";
+  font-family: "Roboto-Regular";
   src: url('../../../fonts/Roboto-Regular.ttf') format("ttf"),
-       url('../../../fonts/Roboto-Regular.woff') format("woff");
+    /* url('../../../fonts/Roboto-Regular.woff') format("woff"); */
 }
 
 @font-face {
-  font-family: "Roboto";
+  font-family: "Roboto-Thin";
   src: url('../../../fonts/Roboto-Thin.ttf') format("ttf"),
-       url('../../../fonts/Roboto-Thin.woff') format("woff");
+    /* url('../../../fonts/Roboto-Thin.woff') format("woff"); */
 }
 
 @font-face {
-  font-family: "Roboto";
+  font-family: "Roboto-Light";
   src: url('../../../fonts/Roboto-Light.ttf') format("ttf"),
-       url('../../../fonts/Roboto-Light.woff') format("woff");
+    /* url('../../../fonts/Roboto-Light.woff') format("woff"); */
 }
 
 body {
