--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -1,7 +1,7 @@
 // FONTS //
 
 // scss input Roboto-Regular
-@import font-face("Roboto-Regular-webfont", ../../../fonts/Roboto-Regular-webfont);
+/* @import font-face("Roboto-Regular-webfont", ../../../fonts/Roboto-Regular-webfont); */
 
 // css output Roboto-Regular-webfont
 @font-face {
@@ -11,7 +11,7 @@
 }
 
 // scss input Roboto-Thin-webfont
-@import font-face("Roboto-Thin-webfont", ../../../fonts/Roboto-Thin-webfont);
+/* @import font-face("Roboto-Thin-webfont", ../../../fonts/Roboto-Thin-webfont); */
 
 //css output Roboto-Thin-webfont
 @font-face {
@@ -21,7 +21,7 @@
 }
 
 // scss input Roboto-Light-webfont
-@import font-face("Roboto-Light-webfont", ../../../fonts/Roboto-Light-webfont);
+/* @import font-face("Roboto-Light-webfont", ../../../fonts/Roboto-Light-webfont); */
 
 //css output Roboto-Light-webfont
 @font-face {
