--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -1,33 +1,28 @@
 // FONTS //
 
-// scss input Roboto-Regular
-/* @import font-face("Roboto-Regular-webfont", ../../../fonts/Roboto-Regular-webfont); */
-
-// css output Roboto-Regular-webfont
+// CSS Output for Roboto Regular
 @font-face {
-  font-family: "Roboto-Regular";
-  src: /* url('../../../fonts/Roboto-Regular.ttf') format("ttf"), */
-       url('../../../fonts/Roboto-Regular-webfont.woff') format("woff");
+  font-family: 'Roboto-Regular';
+  src: url("../../dist/fonts/Roboto-Regular-webfont.eot?") format("embedded-opentype"),
+       url("../../dist/fonts/Roboto-Regular-webfont.woff") format(".woff"),
+       url("../../dist/fonts/Roboto-Regular-webfont.ttf") format("truetype"),
+       url("../../dist/fonts/Roboto-Regular-webfont.svg") format("svg");
 }
 
-// scss input Roboto-Thin-webfont
-/* @import font-face("Roboto-Thin-webfont", ../../../fonts/Roboto-Thin-webfont); */
-
-//css output Roboto-Thin-webfont
 @font-face {
-  font-family: "Roboto-Thin";
-  src: /* url('../../../fonts/Roboto-Thin.ttf') format("ttf"), */
-       url('../../../fonts/Roboto-Thin-webfont.woff') format("woff");
+  font-family: 'Roboto-Light';
+  src: url("../../dist/fonts/Roboto-Light-webfont.eot?") format("embedded-opentype"),
+       url("../../dist/fonts/Roboto-Light-webfont.woff") format(".woff"),
+       url("../../dist/fonts/Roboto-Light-webfont.ttf") format("truetype"),
+       url("../../dist/fonts/Roboto-Light-webfont.svg") format("svg");
 }
 
-// scss input Roboto-Light-webfont
-/* @import font-face("Roboto-Light-webfont", ../../../fonts/Roboto-Light-webfont); */
-
-//css output Roboto-Light-webfont
 @font-face {
-  font-family: "Roboto-Light";
-  src: /* url('../../../fonts/Roboto-Light.ttf') format("ttf"), */
-       url('../../../fonts/Roboto-Light-webfont.woff') format("woff");
+  font-family: 'Roboto-Thin';
+  src: url("../../dist/fonts/Roboto-Thin-webfont.eot?") format("embedded-opentype"),
+       url("../../dist/fonts/Roboto-Thin-webfont.woff") format(".woff"),
+       url("../../dist/fonts/Roboto-Thin-webfont.ttf") format("truetype"),
+       url("../../dist/fonts/Roboto-Thin-webfont.svg") format("svg");
 }
 
 body {
