--- a/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
@@ -68,6 +68,17 @@
       }
     }
 
+    .skillset {
+      margin-top: 100px;
+      svg {
+        margin: auto;
+        padding: 0 24px;
+        @media (min-width: $screen-sm-min) {
+          padding: 0;
+        }
+      }
+    }
+
 /* Pricing Sheet */
 /* Price Sheet Text */
   .about-copy-2 {
